--- a/Sentinel/app/src/main/res/layout/layout_header.xml
+++ b/Sentinel/app/src/main/res/layout/layout_header.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             android:layout_centerInParent="true">
 
         <TextView
