--- a/Sentinel/app/src/main/res/layout/activity_main.xml
+++ b/Sentinel/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         tools:context=".activity.MainActivity">
 
     <include layout="@layout/layout_header"/>
@@ -16,6 +18,7 @@
             android:text="@string/select_date"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/grey_light_text"
+            android:textSize="12sp"
             android:layout_marginLeft="@dimen/main_activity_margin"
             android:layout_marginTop="@dimen/main_activity_margin"/>
 
@@ -52,6 +55,7 @@
             android:text="@string/set_of_duration"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/grey_light_text"
+            android:textSize="12sp"
             android:layout_marginLeft="@dimen/main_activity_margin"
             android:layout_marginTop="@dimen/main_activity_margin"/>
 
