--- a/Sentinel/app/src/main/res/values/styles.xml
+++ b/Sentinel/app/src/main/res/values/styles.xml
@@ -8,4 +8,5 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="dilogTheme" parent="@android:style/Theme.Light.NoTitleBar.Fullscreen"/>
 </resources>
