--- a/Sentinel/app/src/main/res/layout/activity_scan.xml
+++ b/Sentinel/app/src/main/res/layout/activity_scan.xml
@@ -23,7 +23,8 @@
             android:fontFamily="@font/poppins_semi_bold"
             android:layout_marginBottom="30dp"
             android:layout_marginRight="20dp"
-            android:padding="12dp"/>
+            android:elevation="6dp"
+            android:padding="10dp"/>
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_scan_list"
             android:layout_marginLeft="20dp"
