--- a/Sentinel/app/src/main/res/layout/activity_main.xml
+++ b/Sentinel/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
             android:text="02"
             android:inputType="number"
             android:singleLine="true"
+            android:maxLength="3"
             android:textColor="@color/grey_dark_text"
             android:fontFamily="@font/poppins_semi_bold"
             android:background="@drawable/rect_grey"/>
