--- a/Sentinel/app/src/main/res/layout/dialog_send_confirm.xml
+++ b/Sentinel/app/src/main/res/layout/dialog_send_confirm.xml
@@ -89,7 +89,7 @@
         <TextView
                 android:id="@+id/tv_dialog_send"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:textSize="18sp"
                 android:fontFamily="@font/poppins_semi_bold"
                 android:text="@string/send"
@@ -97,9 +97,12 @@
                 android:background="@drawable/rect_blue"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="30dp"
                 android:gravity="center"
-                android:padding="10dp"/>
+                android:elevation="6dp"/>
+
+        <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"/>
     </LinearLayout>
 </RelativeLayout>
