--- a/Sentinel/app/src/main/res/layout/activity_manual.xml
+++ b/Sentinel/app/src/main/res/layout/activity_manual.xml
@@ -87,14 +87,12 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_margin="50dp">
         <ImageView
                 android:id="@+id/iv_wheel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:src="@drawable/wheel7"/>
     </LinearLayout>
-
-
 </LinearLayout>
